Changes for 3.2.11rc2

New features:
A.F....... [ZBX-12825] implemented delayed URL validation; enabled user macros containing URLs as valid; made URL validation as optional; improved URL validation (miks)

Bug fixes:
..F....... [ZBX-12856] fixed empty host filter when adding dependent trigger in trigger edit form (gcalenko)
..F....... [ZBX-13024] fixed parsing "request" parameter for URLs without input parameters (Sasha)

--------------------------------------------------------------------------------
Changes for 3.2.11rc1

Bug fixes:
.......PS. [ZBX-12925] fixed logic of commit/rollback operations (vjaceslavs)
.......PS. [ZBX-12497] improved VMware event log data collection and processing (gleb)
..F....... [ZBX-13024] fixed missed url search part in request login parameter (miks)
..F....... [ZBX-13044] fixed undefined index when setting strict-transport-security http header (miks)
..F....... [ZBX-12897] fixed error causing empty list in popup window when opened from page having host group filter (gcalenko)
A.F....... [ZBX-12655] added filter on event details page to show messages sent to users only from same groups (gcalenko)
..F....... [ZBX-12247] fixed multiselect not showing results for read-only objects in screen configuration (Ivo)
..F....... [ZBX-12130] fixed max length validation in textarea fields (Ivo)
........S. [ZBX-12975] fixed possibility of foreign key constraint failure due to events being removed before trigger data storage period expires (vso)
........S. [ZBX-11426] fixed potentially incorrect delete procedure for problems and events (abs)
........S. [ZBX-12800] fixed incorrect trigger dependency calculation when processing dependent triggers in the same history syncer batch (wiper)
.......P.. [ZBX-12117] fixed proxy passing zeros to history export modules instead of actual numeric values (gleb)
..F....... [ZBX-12856] fixed wrong default value for host filter when adding dependent trigger in trigger edit form (gcalenko)